--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 setTimeout(() => {
                     StickyBannerInstance = window?.GlanceGamingAdInterface?.showStickyBannerAd(StickyObj, bannerCallbacks);
                     refreshStickyBannerAd();
-                    rewardInstance = window.GlanceGamingAdInterface.loadRewardedAd(rewardObj, rewardedCallbacks);
-                    replayInstance = window.GlanceGamingAdInterface.loadRewardedAd(replayObj, replayCallbacks);
+                    //rewardInstance = window.GlanceGamingAdInterface.loadRewardedAd(rewardObj, rewardedCallbacks);
+                    //replayInstance = window.GlanceGamingAdInterface.loadRewardedAd(replayObj, replayCallbacks);
                 }, 1000)
 
             }
