--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Build_WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build_WebGL.data",
-        frameworkUrl: buildUrl + "/Build_WebGL.framework.js",
-        codeUrl: buildUrl + "/Build_WebGL.wasm",
+        dataUrl: buildUrl + "/Build_WebGL.data.unityweb",
+        frameworkUrl: buildUrl + "/Build_WebGL.framework.js.unityweb",
+        codeUrl: buildUrl + "/Build_WebGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Weegoon",
         productName: "MakeMeAngry",
